# tinct

./: Cargo.toml  README.md  flake.nix
src/: cli.rs  color.rs  config.rs  lib.rs  log.rs  main.rs  preview.rs  theme.rs
tests/: integration_test.rs
