[package]
name = "tinct"
version = "0.1.0"
edition = "2021"

[lib]
name = "tinct"
path = "src/lib.rs"

[[bin]]
name = "tinct"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
log = "0.4"
env_logger = "0.10"
shellexpand = "3.1"
colored = "2.1"

[dev-dependencies]
tempfile = "3.0"