[package]
name = "tinct"
version = "0.1.0"
edition = "2021"
authors = ["lonerOrz <lonerOrz@qq.com>"]
description = "A theme injector tool that applies Material Design 3 color palettes to various configuration files"
homepage = "https://github.com/lonerOrz/tinct"
repository = "https://github.com/lonerOrz/tinct"
license = "BSD-3-Clause"
keywords = ["theme", "material-design", "color", "terminal", "configuration"]
categories = ["command-line-utilities", "visualization", "graphics"]
readme = "README.md"

[lib]
name = "tinct"
path = "src/lib.rs"

[[bin]]
name = "tinct"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
log = "0.4"
env_logger = "0.10"
shellexpand = "3.1"
colored = "2.1"

[dev-dependencies]
tempfile = "3.0"
